--- a/shopping/css/style.css
+++ b/shopping/css/style.css
@@ -13,6 +13,11 @@ q:before,q:after {	content:'';}
 abbr,acronym,input { border:0;}
 /* css reset from yahoo YUI  END*/
 
+/* global css */
+.clear {
+	clear: both;
+}
+
 body {
 	font-family: "宋体";
 	font-size: 12px;
@@ -135,4 +140,373 @@ body {
 	height: 8px;
 	border: 0;
 	border-bottom: 2px solid #edbcac;
+	margin-bottom: 0px;
+}
+
+.main {
+	width: 986px;
+	margin: 0 auto;
+}
+
+.main_left {
+	float: left;
+	width: 734px;
+}
+
+.multinav {
+	float: left;
+	width: 166px;
+	background-color: #fffbfb;
+}
+
+.multinav ul{
+}
+
+.multinav ul li {
+	height: 35px;
+	line-height: 35px;
+	margin: 0;
+	font-size: 14px;
+	text-align: center;
+	border-left: 1px solid #f4d1c5;
+	border-bottom: 1px solid #f4d1c5;
+	border-top: 1px solid #f4d1c5;
+	border-right: 1px solid #f4d1c5;
+}
+
+.multinav .selected {
+	-moz-box-shadow: 0 0 10px #DDD;
+	-webkit-box-shadow: 0 0 10px #DDD;
+	box-shadow: 0 0 10px #DDD;
+	z-index: 150;
+}
+
+.multinav_tips {
+	float: left;
+	width: 480px;
+}
+
+.multinav_tips .tip {
+	float: left;
+	z-index: 100;
+	position: absolute;
+	min-height: 35px;
+	background-color: #fffbfb;
+	display: none;
+	width: 480px;
+	-moz-box-shadow: 0 0 10px #DDD;
+	-webkit-box-shadow: 0 0 10px #DDD;
+	box-shadow: 0 0 10px #DDD;
+}
+
+.multinav_tips .tip .tip_title {
+	float: left;
+	display: -moz-inline-box;
+	display: inline-block;
+	min-height: 35px;
+	line-height: 35px;
+	margin: 0px 5px 0px auto;
+	width: 70px;
+	text-align: right;
+}
+
+.multinav_tips .tip .tip_title a:link {
+	font-size : 14px;
+	color: #e4393c;
+	font-weight: bolder;
+}
+
+.multinav_tips .tip .tip_content {
+	float: left;
+	min-height: 35px;
+	line-height: 35px;
+	min-height:: 35px;
+	width: 400px;
+	display: -moz-inline-box;
+	display: inline-block;
+}
+
+.multinav_tips .tip .tip_content ul li {
+	float: left;
+}
+
+.multinav_tips .tip .tip_content ul li a {
+	margin: 0px 5px;
+}
+
+.multinav_tips .tip .tip_content ul li a:link {
+	color: #666666;
+	text-decoration: none;
+}
+
+.multinav_tips .tip .tip_content ul li a:hover {
+	text-decoration: underline;
+}
+
+.multinav_tips .tip hr {
+	float: left;
+	width: 460px;
+	margin-left: 10px;
+}
+
+.main .divide_line {
+	float: left;
+	width: 558px;
+	height: 0px;
+	margin-left: 8px;
+	border: 0px;
+	border-top: 1px solid #cccccc;
+	border-style: dotted;
+}
+
+.banner {
+	margin-left: 10px;
+	margin-top: 8px;
+	float: left;
+}
+
+.hot_bus {
+	float: left;
+	margin-left: 20px;
+	margin-bottom: 12px;
+	width: 533px;
+	height: 26px;
+	line-height: 26px;
+}
+
+.hot_bus p {
+	height: 26px;
+	line-height: 26px;
+	color: #999999;
+}
+
+.hot_bus .title {
+	float: left;
+	font-size: 16px;
+	font-weight: bolder;
+	color: #de0101;
+	margin-left: 15px;
+}
+
+.hot_bus .more {
+	float: right;
+	line-height: 30px;
+	margin-right: 5px;
+	display: inline-block;
+}
+
+.hot_bus .line {
+	clear:both;
+	height: 0px;
+	border: 0px;
+	border-top: 2px solid #fc2121;
+	border-style: solid;
+}
+
+.hot_bus_content {
+	margin: 0px auto;
+	color: #666666;
+	width: 480px;
+}
+
+.hot_bus_content td {
+	padding: 8px 0px 10px 8px;
+	text-align: center;
+}
+
+.hot_bus_content .ft_red {
+	color: #f80000;
+}
+
+.hot_bus_content .hot_icon {
+	background: url(../images/hot.png) no-repeat top right;
+}
+
+.quick_search {
+	width: 520px;
+	height: 38px;
+	line-height: 38px;
+	background-color: #f8eeee;
+	margin-left: 176px;
+	margin-top: 15px;
+	padding-left: 35px;
+	color: #666666;
+}
+
+.quick_search select {
+	margin-left: 10px;
+	color: #666666;
+	min-width: 90px;
+}
+
+.quick_search input {
+	color: #ffffff;
+	margin-left: 14px;
+	width: 60px;
+	height: 24px;
+	background-color: #e50000;
+}
+
+.sugest_shop {
+	float: left;
+	width: 734px;
+	height: 186px;
+	margin-top: 11px;
+	border: 1px solid #e7e7e7;
+}
+
+.sugest_shop h3 {
+	height: 24px;
+	line-height: 26px;
+	font-size: 16px;
+	font-weight: bolder;
+	text-align: left;
+	color: #747474;
+	margin-top: 10px;
+	margin-left: 14px;
+}
+
+.sugest_shop table {
+	margin: 0px auto;
+}
+
+.sugest_shop table td {
+	padding: 10px;
+}
+
+.main_right {
+	float: left;
+	margin-left: 8px;
+}
+.cardcheck {
+	width: 243px;
+	height: 175px;
+	margin-top: 8px;
+	background-color: #f6f6f6;
+}
+
+.cardcheck h3 {
+	background-color: #e94947;
+	height: 40px;
+	line-height: 40px;
+	color: #ffffff;
+	font-size: 16px;
+	font-weight: bolder;
+	text-align: center;
+}
+
+.cardcheck input {
+	margin-left: 12px;
+	margin-top: 12px;
+	width: 220px;
+	height: 32px;
+	border: 1px solid #acacac;
+}
+
+.cardcheck .validatecode {
+	margin-left: 16px;
+	margin-top: 8px;
+	float: left;
+}
+
+.cardcheck .validatecode_input {
+	width: 56px;
+	height: 22px;
+	float: left;
+	margin-top: 9px;
+	margin-left: 6px;
+}
+
+.cardcheck .cardsubmit {
+	background-color: #e84646;
+	width: 64px;
+	height: 26px;
+	margin-left: 6px;
+	margin-top: 8px;
+	color: #ffffff;
+}
+
+.quickmodule {
+	margin-top: 8px;
+	border: 1px solid #f4d1c5;
+	width: 242px;
+	min-height: 190px;
+}
+
+.quickmodule h3 {
+	height: 30px;
+	line-height: 30px;
+	font-size: 16px;
+	font-weight: bolder;
+	text-align: left;
+	color: #747474;
+	margin-left: 10px;
+}
+
+.quickmodule .quick_link {	
+}
+
+.quickmodule .quick_link div {
+	float: left;
+	margin-left: 12px;
+	position: relative;	
+	margin-top: 18px;
+}
+
+.quickmodule .quick_link div a {
+	padding-right: 12px;	
+}
+
+.quickmodule .quick_link div img {
+	position: absolute;
+	bottom: 16px;
+}
+
+.quickmodule .quick_link a:link {
+	color: #666666;
+	text-decoration: none;
+}
+
+.quickmodule .quick_phone_icon {
+	float: left;
+	margin-left: 11px;
+	margin-top: 7px;
+	width: 52px;
+	height: 58px;
+}
+
+.quickmodule .quick_phone_content {
+	float: left;
+	margin-top: 9px;
+	width: 157px;
+	height: 23px;
+	line-height: 23px;
+	border: 1px solid #d7d7d7;
+	background-color: #fbebe6;
+	padding-left: 6px;
+}
+
+
+.quickmodule .quick_phone_content input {
+	width: 123px;
+	height: 23px;
+	float: right;
+}
+
+.quickmodule .quick_phone_chargeBtn {
+	float: left;
+	margin-left: 148px;
+	margin-top: 9px;
+	margin-bottom: 6px;
+	width: 74px;
+	height: 28px;
+	background-color: #f90000;
+	color: #ffffff;
+}
+
+.newsmodule {
+	margin-top: 8px;
+	width: 242px;
+	border: 1px solid #f4d1c5;
+	min-height: 251px;
 }
