--- a/shopping/css/style.css
+++ b/shopping/css/style.css
@@ -609,4 +609,21 @@ body {
 	display: block;
 }
 
+.footer_line {
+	width: 100%;
+	height: 0px;
+	border-top: 1px solid #efefef;
+	margin-top: 28px;
+}
 
+.footer {
+	width: 986px;
+	margin: 0 auto;
+	margin-bottom: 100px;
+}
+
+.footer .icp {
+	margin-top: 28px;
+	text-align: center;
+	color: #999999;
+}
