--- a/shopping/css/style.css
+++ b/shopping/css/style.css
@@ -39,17 +39,18 @@ body {
 }
 
 .middle {
-	margin-top: 28px;
-	height: 60px;
+	width: 986px;
+	margin: 0 auto;
+	height: 120px;
 	font-size: 24px;
 }
 
 .middle .search {
-	float: right;
 	width: 467px;
 	height: 45px;
 	background-color: #f80b00;
-	margin: 13px 28px 0 0;
+	margin: 35px 14px 0 0;
+	float: left;
 }
 
 .middle .search .search_shops {
@@ -88,17 +89,30 @@ body {
 }
 
 .middle .middle_right {
-	float:right;
-	margin: 13px 318px 0 0;
+	margin: 35px 0 0 0;
+	float: left;
+}
+
+.middle .middle_qcode {
+	margin: 0;
+	margin-left: 14px;
+	float: left;
 }
 
 .middle .middle_left {
-	margin-left: 175px;
+	margin: 20px 14px 0 0;
+	float: left;
 }
 
 .nav {
 	height: 43px;
-	background-color: #dc0008
+	background-color: #dc0008;
+	width: 100%;
+}
+
+.nav .nav_middle {
+	width: 986px;
+	margin: 0 auto;
 }
 
 .nav .allshops {
@@ -110,7 +124,7 @@ body {
 	font-size: 12px;
 	color: #ffffff;
 	float: left;
-	margin-left: 177px;
+	margin-left: 14px;
 	font-weight: bold;
 }
 
@@ -137,9 +151,9 @@ body {
 }
 
 .divide_line {
-	height: 8px;
+	height: 4px;
 	border: 0;
-	border-bottom: 2px solid #edbcac;
+	border-bottom: 1px solid #edbcac;
 	margin-bottom: 0px;
 }
 
@@ -610,7 +624,6 @@ body {
 }
 
 .footer_line {
-	width: 100%;
 	height: 0px;
 	border-top: 1px solid #efefef;
 	margin-top: 28px;
@@ -619,7 +632,7 @@ body {
 .footer {
 	width: 986px;
 	margin: 0 auto;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 }
 
 .footer .icp {
