--- a/shopping/css/style.css
+++ b/shopping/css/style.css
@@ -329,6 +329,7 @@ body {
 }
 
 .hot_bus_content {
+	float: left;
 	margin: 0px auto;
 	color: #666666;
 	width: 480px;
@@ -348,12 +349,13 @@ body {
 }
 
 .quick_search {
+	float: left;
 	width: 520px;
-	height: 38px;
-	line-height: 38px;
+	height: 37px;
+	line-height: 37px;
 	background-color: #f8eeee;
-	margin-left: 176px;
-	margin-top: 15px;
+	margin-left: 6px;
+	margin-top: 8px;
 	padding-left: 35px;
 	color: #666666;
 }
@@ -376,7 +378,7 @@ body {
 	float: left;
 	width: 734px;
 	height: 186px;
-	margin-top: 11px;
+	margin-top: 12px;
 	border: 1px solid #e7e7e7;
 }
 
