--- a/shopping/css/style.css
+++ b/shopping/css/style.css
@@ -19,8 +19,11 @@ abbr,acronym,input { border:0;}
 }
 
 body {
-	font-family: "宋体";
-	font-size: 12px;
+	font: 12px 宋体, Arial, Lucida Grande, Tahoma, sans-serif;
+}
+
+h1,h2,h3 {
+	font: 16px 'Microsoft YaHei', 微软雅黑, Arial, Lucida Grande, Tahoma, sans-serif;
 }
 
 .top {
@@ -54,6 +57,7 @@ body {
 }
 
 .middle .search .search_shops {
+	background: url(../images/shop_search_arrow.png) no-repeat 80% center;
 	background-color: #f2f2f2;
 	display: -moz-inline-box;
 	display: inline-block;
@@ -64,6 +68,7 @@ body {
 	float: left;
 	font-size: 18px;
 	padding-left: 16px;
+	cursor: pointer;
 }
 
 .middle .search .search_input {
@@ -107,6 +112,7 @@ body {
 	height: 42px;
 	background-color: #dc0008;
 	width: 100%;
+	font: 16px 'Microsoft YaHei', 微软雅黑;
 }
 
 .nav .nav_middle {
@@ -123,7 +129,7 @@ body {
 	font-size: 12px;
 	color: #ffffff;
 	float: left;
-	margin-left: 14px;
+	margin-left: 8px;
 	font-weight: bold;
 }
 
@@ -134,14 +140,14 @@ body {
 
 .nav .nav_bar ul li {
 	float: left;
-	height: 18px;
-	line-height: 18px;
-	width: 60px;
-	padding: 12px 23px;
-	font-size: 14px;
+	height: 34px;
+	line-height: 34px;
+	width: 70px;
+	padding: 4px 18px;
+	font-size: 16px;
 	color: #ffffff;
-	font-weight: bold;
 	text-align: center;
+	font-weight: lighter;
 }
 
 .nav .nav_bar .selected {
@@ -181,9 +187,10 @@ body {
 	line-height: 36px;
 	margin: 0;
 	font-size: 14px;
+	font-weight: bolder;
 	text-align: left;
 	color: #f74000;
-	padding-left: 60px;
+	padding-left: 45px;
 	border-left: 1px solid #f4d1c5;
 	border-bottom: 1px solid #f4d1c5;
 	border-top: 0px;
@@ -194,7 +201,7 @@ body {
 
 .multinav ul li img {
 	position: absolute;
-	left: 22px;
+	left: 10px;
 	top: 8px;
 	float: left;
 }
@@ -419,8 +426,8 @@ body {
 	line-height: 39px;
 	color: #ffffff;
 	font-size: 16px;
-	font-weight: bolder;
-	text-align: center;
+	text-align: left;
+	padding-left: 10px;
 }
 
 .cardcheck input {
@@ -542,6 +549,7 @@ body {
 	height: 28px;
 	background-color: #f90000;
 	color: #ffffff;
+	font-weight: bolder;
 }
 
 .newsmodule {
