--- a/shopping/css/style.css
+++ b/shopping/css/style.css
@@ -22,6 +22,11 @@ body {
 	font: 12px 宋体, Arial, Lucida Grande, Tahoma, sans-serif;
 }
 
+a:link {
+	color: #666666;
+	text-decoration: none;
+}
+
 h1,h2,h3 {
 	font: 16px 'Microsoft YaHei', 微软雅黑, Arial, Lucida Grande, Tahoma, sans-serif;
 }
@@ -30,6 +35,7 @@ h1,h2,h3 {
 	height: 32px;
 	line-height: 32px;
 	background-color: #F1F1F1;
+	position: relative;
 }
 
 .top  .top_left {
@@ -41,6 +47,51 @@ h1,h2,h3 {
 	margin-right: 200px;
 }
 
+.top .city_panel {
+	position: absolute;
+	top: 32px;
+	left: 195px;
+	border: #edbfb0 1px solid;
+	background-color: #ffffff;
+	width: 480px;
+	padding: 5px 9px;
+	z-index: 900;
+	display: none;
+}
+
+.top .city_panel dl {
+	float: left;
+	margin-bottom: 8px;
+	width: 100%;
+	border-bottom: 1px dashed #e4e4e4;
+}
+
+.top .city_panel dt {
+	float: left;
+	width: 80px;
+	text-align: right;
+}
+
+.top .city_panel dd {
+	float: left;
+	width: 360px;
+	display: block;
+}
+
+.top .city_panel ul {
+	display: block;
+	width: 100%;
+}
+
+.top .city_panel ul li {
+	float: left;
+	margin-left: 16px;
+}
+
+.top .city_panel .more a {
+	float: right;
+}
+
 .middle {
 	width: 986px;
 	margin: 0 auto;
@@ -49,11 +100,30 @@ h1,h2,h3 {
 }
 
 .middle .search {
+	position: relative;
 	width: 467px;
 	height: 45px;
 	background-color: #f80b00;
 	margin: 35px 14px 0 0;
 	float: left;
+}
+
+.middle .search .search_list {
+	position: absolute;
+	float: left;
+	left: 10px;
+	top: 41px;
+	font-size: 14px;
+	border: 1px solid #f80b00;
+	border-top: 0px hidden;
+	width: 75px;
+	background: #f2f2f2;
+	z-index: 900;
+	display: none;
+}
+
+.middle .search .search_list li {
+	margin: 10px 5px;	
 }
 
 .middle .search .search_shops {
